--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       </div>
 
       <div class="col-3 space-between">
-        <a href="#" class="button button-primary full-width margin-bottom-medium">RSVP</a>
-        <a href="#" class="button button-secondary full-width margin-bottom-medium">Registry</a>
-        <a href="#" class="button button-primary full-width">Schedule</a>
+        <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary full-width margin-bottom-medium" target="_blank">RSVP</a>
+        <a href="#" class="button button-secondary full-width margin-bottom-medium" target="_blanks">Registry</a>
+        <a href="#" class="button button-primary full-width" target="_blank">Schedule</a>
       </div>
     </div>
 
