Desktop styles and some responsive things

--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Abby Marries Chris</title>
-    <link rel="stylesheet" href="./styles/main.css">
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Abby Marries Chris</title>
+  <link rel="stylesheet" href="./styles/main.css">
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
+</head>
+
+<body>
+  <div class="container">
     <div class="row">
       <div class="col-centered">
         <img class="logo padding-top-large" src="/assets/logo.svg" alt="Abby and Chris are getting married!">
       </div>"
     </div>
+  </div>
 
-    <div class="container red-background rounded-borders padding-small info-pane text-center">
+  <div class="container padding-small info-pane text-center">
+    <div class="row red-background rounded-borders padding-small light-shadow">
       <div class="col-3 margin-vertical-medium">
         <div class="margin-bottom-medium">
           <h1 class="subtitle">When</h1>
           <h2>September 16, 2023</h2>
         </div>
-  
+
         <h1 class="subtitle">Where</h1>
-        <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8"><h2>
-          615 Buck Mountail Trail, </br>
-          Cookeville, TN, 38501
-        </h2></a>
+        <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
+          <h2>
+            615 Buck Mountail Trail, </br>
+            Cookeville, TN, 38501
+          </h2>
+        </a>
       </div>
 
       <div class="col-6">
@@ -35,14 +42,16 @@
       </div>
 
       <div class="col-3 space-between">
-        <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary full-width margin-bottom-medium" target="_blank">RSVP</a>
+        <a href="https://www.zola.com/registry/abbyandchrisseptember16"
+          class="button button-primary full-width margin-bottom-medium" target="_blank">RSVP</a>
         <a href="#" class="button button-secondary full-width margin-bottom-medium" target="_blanks">Registry</a>
         <a href="#" class="button button-primary full-width" target="_blank">Schedule</a>
       </div>
     </div>
+  </div>
 
-    <!-- Scripts! -->
-    <script src="./scripts/main.js"></script>
-  </body>
+  <!-- Scripts! -->
+  <script src="./scripts/main.js"></script>
+</body>
+
 </html>
-
