--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
   </head>
-  <body>
+  <body class="photo-background">
     <div class="row">
       <div class="col-centered">
         <img class="logo padding-top-large" src="/assets/logo.svg" alt="Abby and Chris are getting married!">
@@ -35,9 +35,9 @@
       </div>
 
       <div class="col-3 space-between">
-        <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary full-width margin-bottom-medium" target="_blank">RSVP</a>
-        <a href="#" class="button button-secondary full-width margin-bottom-medium" target="_blanks">Registry</a>
-        <a href="#" class="button button-primary full-width" target="_blank">Schedule</a>
+        <a href="/rsvp.html" class="button button-primary full-width margin-bottom-medium">RSVP</a>
+        <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-secondary full-width margin-bottom-medium" target="_blank">Registry</a>
+        <a href="/schedule.html" class="button button-primary full-width">Schedule</a>
       </div>
     </div>
 
