--- a/index.html
+++ b/index.html
@@ -1,48 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Abby Marries Chris</title>
-    <link rel="stylesheet" href="./styles/main.css">
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
-  </head>
-  <body class="photo-background">
-    <div class="row">
-      <div class="col-centered">
-        <img class="logo padding-top-large" src="/assets/logo.svg" alt="Abby and Chris are getting married!">
-      </div>"
-    </div>
-  </div>
 
-  <div class="container padding-small info-pane text-center">
-    <div class="row red-background rounded-borders padding-small light-shadow">
-      <div class="col-3 margin-vertical-medium">
-        <div class="margin-bottom-medium">
-          <h1 class="subtitle">When</h1>
-          <h2>September 16, 2023</h2>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Abby Marries Chris</title>
+  <link rel="stylesheet" href="./styles/main.css">
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
+</head>
+
+<body class="photo-background">
+  <div class="container padding-small text-center">
+    <div class="row full-height-mobile">
+      <div class="col-5 info-pane">
+        <div class="row logo-wrapper">
+          <img class="logo" src="/assets/logo.svg" alt="Abby and Chris are getting married!">
         </div>
 
-        <h1 class="subtitle">Where</h1>
-        <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
-          <h2>
-            615 Buck Mountail Trail, </br>
-            Cookeville, TN, 38501
-          </h2>
-        </a>
+        <div class="info-wrapper">
+          <div class="row">
+            <div class="col-12">
+              <div class="margin-bottom-medium">
+                <h2>September 16, 2023</h2>
+                <h3>at 5pm</h3>
+
+                <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
+                  <h2>
+                    615 Buck Mountail Trail, </br>
+                    Cookeville, Tennessee </br>
+                    38501
+                  </h2>
+                </a>
+              </div>
+
+              <div class="rounded-borders" id="map"></div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-4 col-4-mobile">
+              <a href="/rsvp.html" class="button button-primary full-width">RSVP</a>
+            </div>
+
+            <div class="col-4 col-4-mobile">
+              <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
+                target="_blank">Registry</a>
+            </div>
+
+            <div class="col-4 col-4-mobile">
+              <a href="/faq.html" class="button button-primary">More Info</a>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="col-6">
-        <div class="full-size rounded-borders" id="map"></div>
-      </div>
-
-      <div class="col-3 space-between">
-        <a href="/rsvp.html" class="button button-primary full-width margin-bottom-medium">RSVP</a>
-        <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-secondary full-width margin-bottom-medium" target="_blank">Registry</a>
-        <a href="/schedule.html" class="button button-primary full-width">Schedule</a>
-      </div>
+      <div class="col-7 mobile-hide"></div>
     </div>
   </div>
 
