--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="photo-background">
-  <div class="container padding-small text-center">
+  <div class="container text-center">
     <div class="row full-height-mobile">
       <div class="col-5 info-pane">
         <div class="row logo-wrapper">
@@ -22,35 +22,31 @@
         <div class="info-wrapper">
           <div class="row">
             <div class="col-12">
-              <div class="margin-bottom-medium">
+              <div class="details-wrapper">
                 <h2>September 16, 2023</h2>
-                <h3>at 5pm</h3>
+                <h3>at 5pm</h3> <br>
 
                 <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
                   <h2>
-                    615 Buck Mountail Trail, </br>
-                    Cookeville, Tennessee </br>
+                    615 Buck Mountail Trail, <br>
+                    Cookeville, Tennessee <br>
                     38501
                   </h2>
                 </a>
               </div>
-
-              <div class="rounded-borders" id="map"></div>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-4 col-4-mobile">
+            <div class="col-12 buttons-wrapper">
               <a href="/rsvp.html" class="button button-primary full-width">RSVP</a>
-            </div>
 
-            <div class="col-4 col-4-mobile">
               <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                 target="_blank">Registry</a>
+
+              <a href="/faq.html" class="button button-primary">Info</a>
             </div>
 
-            <div class="col-4 col-4-mobile">
-              <a href="/faq.html" class="button button-primary">More Info</a>
+            <div class="col-12">
+              <div class="rounded-borders" id="map"></div>
             </div>
           </div>
         </div>
