--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
 
 <head>
   <meta charset="UTF-8">
@@ -12,25 +12,28 @@
 </head>
 
 <body class="photo-background">
-  <div class="container text-center">
+  <div class="container container-full text-center">
     <div class="row full-height-mobile">
       <div class="col-5 info-pane">
         <div class="row logo-wrapper">
-          <img class="logo" src="/assets/logo.svg" alt="Abby and Chris are getting married!">
+          <h1>
+            <img class="logo" src="/assets/logo.svg" alt="Abby and Chris are getting married!">
+          </h1>
         </div>
 
         <div class="info-wrapper">
           <div class="row">
             <div class="col-12">
               <div class="details-wrapper">
-                <h2>September 16, 2023</h2>
-                <h3>at 5pm</h3> <br>
+                <h2>
+                  September 16, 2023 <br>
+                  <span class="subheading">at 5pm</span>
+                </h2> <br>
 
                 <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
                   <h2>
-                    615 Buck Mountail Trail, <br>
-                    Cookeville, Tennessee <br>
-                    38501
+                    615 Buck Mountail Trail <br>
+                    <span class="subheading">Cookeville, Tennessee 38501</span>
                   </h2>
                 </a>
               </div>
@@ -42,7 +45,7 @@
               <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                 target="_blank">Registry</a>
 
-              <a href="/faq.html" class="button button-primary">Info</a>
+              <!-- <a href="/faq.html" class="button button-primary">Info</a> -->
             </div>
 
             <div class="col-12">
