Fix static assets

--- a/rsvp.html
+++ b/rsvp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Abby Marries Chris</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script> -->
     <!-- <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' /> -->
 </head>
@@ -158,7 +158,7 @@
         }
         form.addEventListener("submit", handleSubmit)
     </script>
-    <script src="./scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
