--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="col-12 buttons-wrapper">
-              <a href="/rsvp.html" class="button button-primary full-width">RSVP</a>
+              <a href="/rsvp" class="button button-primary full-width">RSVP</a>
 
               <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                 target="_blank">Registry</a>
