--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
                 <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
                   <h2>
-                    615 Buck Mountail Trail <br>
-                    <span class="subheading">Cookeville, Tennessee 38501</span>
+                    615 Buck Mountain Trail <br>
+                    <span class="subheading">Cookeville, Tennessee 38506</span>
                   </h2>
                 </a>
               </div>
