--- a/rsvp.html
+++ b/rsvp.html
@@ -44,7 +44,7 @@
                         <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                             target="_blank">Registry</a>
 
-                        <!-- <a href="/faq.html" class="button button-primary">Info</a> -->
+                        <a href="/info.html" class="button button-primary">Info</a>
                     </div>
                 </div>
             </div>
