Remove full height on info, rsvp

--- a/info.html
+++ b/info.html
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Abby Marries Chris</title>
     <link rel="stylesheet" href="styles/main.css">
-    <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script> -->
-    <!-- <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' /> -->
 </head>
 
 <body>
@@ -16,9 +14,10 @@
         <div class="row">
             <div class="col-centered col-5 info-pane text-center justify-start">
                 <div class="logo-wrapper">
-                    <img class="logo padding-top-large" src="/assets/logo.svg"
-                        alt="Abby and Chris are getting married!">
-
+                    <a href="/">
+                        <img class="logo padding-top-large" src="/assets/logo.svg"
+                            alt="Abby and Chris are getting married!">
+                    </a>
                     <div class="info-wrapper mobile-hide">
                         <div class="row">
                             <div class="col-12">
@@ -170,7 +169,6 @@
                     </ul>
 
                 </section>
-
             </div>
         </div>
     </div>
