--- a/rsvp.html
+++ b/rsvp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="full-height">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Abby Marries Chris</title>
     <link rel="stylesheet" href="styles/main.css">
-    <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script> -->
-    <!-- <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' /> -->
 </head>
 
 <body>
@@ -16,9 +14,10 @@
         <div class="row">
             <div class="col-centered col-5 info-pane text-center">
                 <div class="logo-wrapper">
+                    <a href="/">
                     <img class="logo padding-top-large" src="/assets/logo.svg"
                         alt="Abby and Chris are getting married!">
-
+                    </a>
                     <div class="info-wrapper mobile-hide">
                         <div class="row">
                             <div class="col-12">
@@ -158,7 +157,6 @@
         }
         form.addEventListener("submit", handleSubmit)
     </script>
-    <script src="scripts/main.js"></script>
 </body>
 
 </html>
