--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                 target="_blank">Registry</a>
 
-              <a href="/info.html" class="button button-primary">Info</a>
+              <a href="/info" class="button button-primary">Info</a>
             </div>
 
             <div class="col-12">
