Fix nav buttons on secondary pages

--- a/info.html
+++ b/info.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="col-12 buttons-wrapper mobile-hide">
-                        <a href="/" class="button button-primary full-width">Home</a>
+                        <a href="/rsvp" class="button button-primary full-width">RSVP</a>
 
                         <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                             target="_blank">Registry</a>
