--- a/rsvp.html
+++ b/rsvp.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="col-12 buttons-wrapper mobile-hide">
-                        <a href="/" class="button button-primary full-width">Home</a>
+                        <a hre="/rsvp" class="button button-primary full-width">RSVP</a>
 
                         <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                             target="_blank">Registry</a>
@@ -97,12 +97,6 @@
                         <p class="notice">Due to limited seating, we have reserved a seat for each person addressed on the envelope of your
                             invitation. <strong>Please do not RSVP additional guests.</strong></p>
                     </fieldset>
-
-                    <!-- <p>Leave your preferred method of contact in case we need to get in touch!</p>
-                    <label>Phone:</label>
-                    <input type="tel" id="phone" class="form-control" name="phone">
-                    <label>Email:</label>
-                    <input type="email" name="email" class="form-control" /> -->
 
                     <label>Anything you want to share with Abby and Chris?</label>
                     <textarea type="text" name="message" rows="5" class="form-control" placeholder="Ooh la la. What do we got here? The Maitlands, uh? Cute couple. Look nice and stupid, too."></textarea>
