--- a/info.html
+++ b/info.html
@@ -51,7 +51,9 @@
             <div class="col-7 padding-medium">
 
                 <!-- TODO: SVG elements above and below -->
-                <h1>Info</h1>
+                <div class="filigree">
+                    <h1>Info</h1>
+                </div>
 
                 <div id="#schedule">
                     <h2>Schedule</h2>
@@ -102,7 +104,7 @@
 
                     <div class="faq-item">
                         <h3>Do I get a plus one?</h3>
-                        <p>If we reserved a seat for you and a guest, your invitation will reflect that.</p>
+                        <p>Due to space limitations, we will not be able to give people plus ones.</p>
                     </div>
 
                     <div class="faq-item">
@@ -114,9 +116,7 @@
                         <h3>Can I take photos?</h3>
                         <p>We have our dream photographers documenting our wedding day. It's really important to us that
                             phones and cameras are not out during the ceremony, especially during the processional. We
-                            invite you to take as many photos as you please the rest of the day. The wedding is at
-                            Abby's parents home on Buck Mountain. The ceremony and reception will take place in the
-                            backyard, and the rain plan will take place under a large tent.</p>
+                            invite you to take as many photos as you please the rest of the day.</p>
                     </div>
 
                     <div class="faq-item">
