--- a/rsvp.html
+++ b/rsvp.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container display-flex">
         <div class="row">
-            <div class="col-centered col-5 info-pane text-center">
+            <div class="col-centered col-5 info-pane text-center justify-start">
                 <div class="logo-wrapper">
                     <a href="/">
                         <img class="logo padding-top-large" src="/assets/logo.svg"
