Conditional RSVP form, add fields

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Abby Marries Chris</title>
-  <link rel="stylesheet" href="styles/main.css">
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-  <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
+  <link rel="stylesheet" href="styles/main.css?c=1">
 </head>
 
 <body class="photo-background">
@@ -59,7 +57,9 @@
     </div>
   </div>
 
-  <!-- Scripts! -->
+  <!-- Scripts! --> 
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet' />
   <script src="scripts/main.js"></script>
 </body>
 
