--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Abby Marries Chris</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css?c=1">
 </head>
 
 <body>
@@ -131,8 +131,8 @@
                     </div>
                 </section>
 
-                <section id="reccomendations">
-                    <h2>Local Reccomendations</h2>
+                <section id="recomendations">
+                    <h2>Local Recomendations</h2>
 
                     <h3>Dining</h3>
 
