--- a/rsvp.html
+++ b/rsvp.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="col-12 buttons-wrapper mobile-hide">
-                        <a hre="/rsvp" class="button button-primary full-width">RSVP</a>
+                        <a href="/rsvp" class="button button-primary full-width">RSVP</a>
 
                         <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
                             target="_blank">Registry</a>
