--- a/rsvp.html
+++ b/rsvp.html
@@ -5,131 +5,135 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Abby Marries Chris</title>
-    <link rel="stylesheet" href="styles/main.css?c=2">
+    <link rel="stylesheet" href="styles/main.css?c=3>
 </head>
 
 <body>
-    <div class="container display-flex">
-        <div class="row">
-            <div class="col-centered col-5 info-pane text-center justify-start">
-                <div class="logo-wrapper">
-                    <a href="/">
-                        <img class="logo padding-top-large" src="/assets/logo.svg"
-                            alt="Abby and Chris are getting married!">
-                    </a>
-                    <div class="info-wrapper mobile-hide">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="details-wrapper">
-                                    <h2>
-                                        September 16, 2023 <br>
-                                        <span class="subheading">at 5pm</span>
-                                    </h2> <br>
+    <div class=" container display-flex">
+    <div class="row">
+        <div class="col-centered col-5 info-pane text-center justify-start">
+            <div class="logo-wrapper">
+                <a href="/">
+                    <img class="logo padding-top-large" src="/assets/logo.svg"
+                        alt="Abby and Chris are getting married!">
+                </a>
+                <div class="info-wrapper mobile-hide">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="details-wrapper">
+                                <h2>
+                                    September 16, 2023 <br>
+                                    <span class="subheading">at 5pm</span>
+                                </h2> <br>
 
-                                    <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
-                                        <h2>
-                                            615 Buck Mountain Trail <br>
-                                            <span class="subheading">Cookeville, Tennessee 38506</span>
-                                        </h2>
-                                    </a>
-                                </div>
+                                <a href="https://goo.gl/maps/MChBSeecQtTxUCMq8">
+                                    <h2>
+                                        615 Buck Mountain Trail <br>
+                                        <span class="subheading">Cookeville, Tennessee 38506</span>
+                                    </h2>
+                                </a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 buttons-wrapper mobile-hide">
-                        <a href="/rsvp" class="button button-primary full-width">RSVP</a>
-
-                        <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
-                            target="_blank">Registry</a>
-
-                        <a href="/info" class="button button-primary">Info</a>
                     </div>
                 </div>
-            </div>
+                <div class="col-12 buttons-wrapper mobile-hide">
+                    <a href="/rsvp" class="button button-primary full-width">RSVP</a>
 
-            <div class="col-7 form-wrapper">
+                    <a href="https://www.zola.com/registry/abbyandchrisseptember16" class="button button-primary"
+                        target="_blank">Registry</a>
 
-                <form id="my-form" action="https://formspree.io/f/xnqyewdg" method="POST">
-                    <div class="form-fields">
-                        <div class="text-center margin-bottom-medium filigree">
-                            <h1>RSVP</h1>
-                            <h2 class="boldfinger">Are you in?</h2>
-                        </div>
-
-                        <fieldset class="field-group">
-                            <label>Your Name:</label>
-                            <input type="text" name="name" class="form-control" placeholder="Adam Maitland" required />
-                        </fieldset>
-
-                        <fieldset class="field-group" id="rsvp_fieldset">
-                            <legend>Will you be joining us?</legend>
-
-                            <div>
-                                <input type="radio" name="rsvp" value="yes" checked id="rsvp_yes">
-                                <label for="rsvp_yes">Totally <span class="subtext">(Yes)</span></label>
-                            </div>
-
-                            <div>
-                                <input type="radio" name="rsvp" value="no" id="rsvp_no">
-                                <label for="rsvp_no">Bummer <span class="subtext">(No)</span></label>
-                            </div>
-                        </fieldset>
-
-                        <fieldset class="field-group" id="party_size_fieldset">
-                            <label for="party_size">How many people are in your party?</label>
-
-                            <select name="party_size" id="party_size" class="form-control" required>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
-                        </fieldset>
-
-                        <fieldset class="field-group" id="guest_names_fieldset">
-                            <label>Guest Names:</label>
-                            <p>List each guest who will be attending.</p>
-                            <input type="text" name="guest_names" class="form-control"
-                                placeholder="Adam and Barabara Maitland" required id="guest_names" />
-
-                            <p class="notice">Due to limited seating, we have reserved a seat for each person addressed
-                                on the envelope of your
-                                invitation. <strong>Please do not RSVP additional guests.</strong></p>
-                        </fieldset>
-
-                        <fieldset class="field-group" id="contact_info_fieldset">
-                            <label>Contact Info</label>
-                            <p>What is your email address and phone number in case we need to get in touch?</p>
-                            <label for="telephone">Phone Number</label>
-                            <input type="tel" name="telephone" id="telephone" placeholder="(555) 555-5555"
-                                class="form-control" required>
-
-                            <label for="email-address">Email Address</label>
-                            <input type="email" name="_replyto" id="email_address" placeholder="beetlegeuse@gmail.com"
-                                class="form-control" required>
-                        </fieldset>
-
-                        <label>Anything you want to share with Abby and Chris?</label>
-                        <textarea type="text" name="message" rows="5" class="form-control"
-                            placeholder="Ooh la la. What do we got here? The Maitlands, uh? Cute couple. Look nice and stupid, too."></textarea>
-                            <p class="notice error display-none" id="errors"></p>
-                            <button id="my-form-button" class="button button-primary full-width">Submit</button>
-                        <input type="text" name="_gotcha" style="display:none" />
-                    </div>
-
-                    <div class="form-message">
-                        <div class="filigree margin-bottom-medium">
-                            <h1>Thanks!</h1>
-                            <h2 class="boldfinger success-message" id="status"></h2>
-                        </div>
-                        <img src="/assets/ollie.png" alt="Ollie says thanks!" class="success-image">
-                    </div>
-                </form>
+                    <a href="/info" class="button button-primary">Info</a>
+                </div>
             </div>
         </div>
+
+        <div class="col-7 form-wrapper">
+
+            <form id="my-form" action="https://formspree.io/f/xnqyewdg" method="POST">
+                <div class="form-fields">
+                    <div class="text-center margin-bottom-medium filigree">
+                        <h1>RSVP</h1>
+                        <h2 class="boldfinger">Are you in?</h2>
+                    </div>
+
+                    <fieldset class="field-group">
+                        <label>Your Name:</label>
+                        <input type="text" name="name" class="form-control" placeholder="Adam Maitland" required />
+                    </fieldset>
+
+                    <fieldset class="field-group" id="rsvp_fieldset">
+                        <legend>Will you be joining us?</legend>
+
+                        <div>
+                            <input type="radio" name="rsvp" value="yes" checked id="rsvp_yes">
+                            <label for="rsvp_yes">Totally <span class="subtext">(Yes)</span></label>
+                        </div>
+
+                        <div>
+                            <input type="radio" name="rsvp" value="no" id="rsvp_no">
+                            <label for="rsvp_no">Bummer <span class="subtext">(No)</span></label>
+                        </div>
+                    </fieldset>
+
+                    <fieldset class="field-group" id="party_size_fieldset">
+                        <label for="party_size">How many people are in your party?</label>
+
+                        <select name="party_size" id="party_size" class="form-control" required>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                        </select>
+                    </fieldset>
+
+                    <fieldset class="field-group" id="guest_names_fieldset">
+                        <label>Guest Names:</label>
+                        <p>List each guest who will be attending.</p>
+                        <input type="text" name="guest_names" class="form-control"
+                            placeholder="Adam and Barabara Maitland" required id="guest_names" />
+
+                        <p class="notice">Due to limited seating, we have reserved a seat for each person addressed
+                            on the envelope of your
+                            invitation. <strong>Please do not RSVP additional guests.</strong></p>
+                    </fieldset>
+
+                    <fieldset class="field-group" id="contact_info_fieldset">
+                        <label>Contact Info</label>
+                        <p>What is your email address and phone number in case we need to get in touch?</p>
+                        <label for="telephone">Phone Number</label>
+                        <input type="tel" name="telephone" id="telephone" placeholder="(555) 555-5555"
+                            class="form-control" required>
+
+                        <label for="email-address">Email Address</label>
+                        <input type="email" name="_replyto" id="email_address" placeholder="beetlegeuse@gmail.com"
+                            class="form-control" required>
+                    </fieldset>
+
+                    <label>Anything you want to share with Abby and Chris?</label>
+                    <textarea type="text" name="message" rows="5" class="form-control"
+                        placeholder="Ooh la la. What do we got here? The Maitlands, uh? Cute couple. Look nice and stupid, too."></textarea>
+                    <p class="notice error display-none" id="errors"></p>
+                    <button id="my-form-button" class="button button-primary full-width">Submit</button>
+                    <input type="text" name="_gotcha" style="display:none" />
+                </div>
+
+                <div class="form-message">
+                    <div class="filigree margin-bottom-medium">
+                        <h1>Thanks!</h1>
+                        <h2 class="boldfinger success-message" id="status"></h2>
+                    </div>
+                    <img src="/assets/ollie.png" alt="Ollie says thanks!" class="success-image">
+                </div>
+            </form>
+        </div>
+    </div>
     </div>
 
     <!-- Scripts! -->
@@ -225,6 +229,6 @@
         }
         form.addEventListener("submit", handleSubmit)
     </script>
-</body>
+    </body>
 
 </html>
