Colors and typo

--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>Abby Marries Chris</title>
-    <link rel="stylesheet" href="styles/main.css?c=3">
+    <link rel="stylesheet" href="styles/main.css?c=4">
 </head>
 
 <body>
@@ -54,7 +54,6 @@
 
             <div class="col-7 padding-medium">
 
-                <!-- TODO: SVG elements above and below -->
                 <div class="filigree">
                     <h1>Info</h1>
                 </div>
@@ -104,6 +103,8 @@
                         <p>We invite you to wear garden party attire, below are our wedding colors, if you feel so
                             inclined, feel free to join us in wearing these shades. If you like wearing heels, we
                             recommend block heels and wedges as the ceremony and reception will be on the lawn.</p>
+
+                            <img src="/assets/colors.png" class="standard">
                     </div>
 
                     <div class="faq-item">
@@ -135,8 +136,8 @@
                     </div>
                 </section>
 
-                <section id="recomendations">
-                    <h2>Local Recomendations</h2>
+                <section id="recommendation">
+                    <h2>Local Recommendations</h2>
 
                     <h3>Dining</h3>
 
